Fix the horizontal scroll for the tree view, and make the tree skinnable

--- a/app/components/ProjectSidebar.scss
+++ b/app/components/ProjectSidebar.scss
@@ -1,14 +1,11 @@
 :local {
   .container {
     /*position: absolute;*/
-    background-color: #333;
     width: 100%;
     height: 100%;
     font-size: 0.8em;
   }
   .titlebar {
-    background-color: #111;
-    font-size: 1rem;
     text-align: center;
     overflow-x: hidden;
     white-space: nowrap;
@@ -21,40 +18,32 @@
     float: right;
   }
   .titlebutton {
-    border: 1px #666 solid;
-    margin: 0.8em;
-    background-color: #444;
-    font-size: 0.8rem;
     cursor: pointer;
   }
   .treeContainer {
-    height: 100%;
-    overflow-x: scroll;
-    text-overflow: ellipsis;
+    /* FIXME the height of this container goes below the window.
+    Figure out what's going wrong, then set the height to 100%. */
+    height: 96%;
     white-space: nowrap;
     cursor: default;
     user-select: none;
+    overflow: auto;
   }
   .treeContainer div {
-    overflow: hidden;
+    /*overflow: hidden;*/
   }
   .disabled {
     text-decoration: line-through;
-    color: #888;
   }
   .enabled {
-    color: #ccc;
   }
   .selected {
-    background-color: #366;
   }
   .planFile {
-    color: #5aa;
     font-weight: bold;
     cursor: pointer;
   }
   .projectFile {
-    color: #777;
     font-weight: normal;
     cursor: not-allowed;
   }
